starting tweet post feature

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -25,5 +25,6 @@
 <script src="./controllers/navBarController.js"></script>
 
 <script src="./services/authenticationService.js"></script>
+<script src="./services/tweetService.js"></script>
 
 </html>
