Working on profile edition.

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -5,6 +5,7 @@
     <title>Twitter</title>
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./views/assets/stylesheets/stylesheets-default.css">
+    <link rel="stylesheet" type="text/css" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
 
 </head>
 <body>
@@ -20,12 +21,14 @@
 <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
+<script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
 <script src="./app.js"></script>
 
 <script src="./controllers/homeController.js"></script>
 <script src="./controllers/loginController.js"></script>
 <script src="./controllers/navBarController.js"></script>
+<script src="./controllers/profileController.js"></script>
 
 <script src="./services/authenticationService.js"></script>
 <script src="./services/tweetService.js"></script>
