Still working on user profile. Trying to load a specific user from the WakandaDB. Fixing...

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -18,6 +18,7 @@
 <script src="/bower_components/angular/angular.min.js"></script>
 <script src="/bower_components/angular-wakanda/angular-wakanda.min.js"></script>
 <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
+<script src="/bower_components/angular-route/angular-route.min.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
