It's now possible to reply to a tweet (from another user than the currently logged in).

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -26,6 +26,7 @@
 
 <script src="./app.js"></script>
 
+<script src="./controllers/modalTweetReplyController.js"></script>
 <script src="./controllers/homeController.js"></script>
 <script src="./controllers/loginController.js"></script>
 <script src="./controllers/navBarController.js"></script>
