Add twitter nickname parsing in tweet content

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -24,6 +24,8 @@
 <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
 <script src="/bower_components/angular-xeditable/dist/js/xeditable.js"></script>
 
+<script src="./js/angular-linkify-custom.js"></script>
+
 <script src="./app.js"></script>
 
 <script src="./controllers/modalTweetReplyController.js"></script>
