Move code for tweet feed in a directive

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -28,6 +28,8 @@
 
 <script src="./app.js"></script>
 
+<script src="./directive/tweet-feed.js"></script>
+
 <script src="./controllers/modalTweetReplyController.js"></script>
 <script src="./controllers/homeController.js"></script>
 <script src="./controllers/loginController.js"></script>
