--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -35,6 +35,7 @@
 <script src="./controllers/loginController.js"></script>
 <script src="./controllers/navBarController.js"></script>
 <script src="./controllers/profileController.js"></script>
+<script src="./controllers/searchController.js"></script>
 
 <script src="./services/authenticationService.js"></script>
 <script src="./services/tweetService.js"></script>
