Fix responsive for mobiles

--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -2,11 +2,12 @@
 <html ng-app="twitter">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Twitter</title>
+
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./views/assets/stylesheets/stylesheets-default.css">
     <link rel="stylesheet" type="text/css" href="/bower_components/angular-xeditable/dist/css/xeditable.css">
-
 </head>
 <body>
 <div class="container">
@@ -19,6 +20,8 @@
 <script src="/bower_components/angular-wakanda/angular-wakanda.min.js"></script>
 <script src="/bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
 <script src="/bower_components/angular-route/angular-route.min.js"></script>
+<script src="/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
 <script src="/bower_components/ngstorage/ngStorage.min.js"></script>
