--- a/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
+++ b/twitter-wakanda/NG-Wakanda-Pack/WebFolder/twitter/index.html
@@ -2,7 +2,7 @@
 <html ng-app="twitter">
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Twitter</title>
 
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
